# Multi-item-single-image-detection

./: README.md  app.py  detection.py  pyproject.toml  requiremenst.txt  requirements.txt
